enhanced test coverage